[package]
name    = "packet"
version = "0.1.2"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Network packet handling."
repository  = "https://github.com/meh/rust-packet"
keywords    = ["packet", "network", "ip", "tcp", "udp"]

[dependencies]
thiserror = "1"
bitflags  = "1"
byteorder = "1"
hwaddr    = "0.1"

util = {version = "0.1.0", git = "https://gitlab.itd-services.de/studentenprojekte/router-os/routeros", branch = "develop", package = "util"}